--- a/formulario/ex3.html
+++ b/formulario/ex3.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 </head>
 <body>
+	
 	<form action="ex3.php" method="POST">
 	<h1>Exemplo de formulário em PHP</h1>
 
